# retroglyph

./: .editorconfig  .gitattributes  .gitignore  .jj-hooks.toml  .jj-hooks.yaml  .markdownlint-cli2.jsonc  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Justfile  LICENSE  README.md  RELEASING.md  STYLE_GUIDE.md  TODO.md  build.rs  cliff.toml  codecov.yml  deny.toml  hk.pkl  llms-full.txt  llms.txt  progress.md  release-plz.toml
benches/: Cargo.toml  retroglyph.rs
benches/src/: lib.rs
crates/core/: CHANGELOG.md  Cargo.toml  README.md
crates/core/benches/: blit.rs  color.rs  flatten.rs  grid_construct.rs  grid_diff.rs  subcell.rs
crates/core/examples/: headless.rs
crates/core/src/: animate.rs  app.rs  camera.rs  color.rs  event.rs  frame_clock.rs  grid.rs  layout.rs  lib.rs  style.rs  subcell.rs  terminal.rs  text.rs  tile.rs
crates/crossterm/: CHANGELOG.md  Cargo.toml  README.md
crates/crossterm/benches/: backend_overhead.rs  draw_overhead.rs  event_translation.rs
crates/crossterm/src/: lib.rs
crates/crossterm/tests/: non_tty.rs
crates/examples/: Cargo.toml
crates/examples/benches/: retroglyph.rs
crates/examples/examples/: dashboard.rs  dirty_viz.rs  dungeon_room.rs  headless.rs  interaction_demo.rs  responsive_game_ui.rs  roguelike_dungeon.rs  runner.rs  scrolling_roguelike.rs  sokoban.rs  sprite_stress.rs  subpixel.rs  tileset.rs
crates/examples/src/: lib.rs
crates/examples/tests/: e2e.rs  e2e_snapshots.rs  example_metadata_consistency.rs  software_renderer.rs
crates/font/: Cargo.toml  README.md
crates/font/src/: lib.rs
crates/gl/: CHANGELOG.md  Cargo.toml  README.md
crates/gl/src/: atlas.rs  config.rs  context_native.rs  context_wasm.rs  error.rs  headless.rs  lib.rs  renderer.rs  shaders.rs
crates/software/: CHANGELOG.md  Cargo.toml  README.md
crates/software/benches/: blit.rs  damage.rs  raster.rs  resolve_color.rs
crates/software/src/: bitmap_font.rs  config.rs  lib.rs  sprite_cache.rs  surface_native.rs  surface_wasm.rs  tileset.rs  windowed.rs
crates/terminal/: CHANGELOG.md  Cargo.toml  README.md
crates/terminal-wasm/: CHANGELOG.md  Cargo.toml  README.md
crates/terminal-wasm/benches/: event_throughput.rs  take_output.rs
crates/terminal-wasm/js/: xterm-driver.js
crates/terminal-wasm/src/: lib.rs
crates/terminal-wasm/tests/: wasm_ffi.rs
crates/terminal/benches/: frame_render.rs  wide_char.rs
crates/terminal/src/: lib.rs
crates/widgets/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/widgets/benches/: hit_testing.rs  layout_solve.rs  list_sparkline_render.rs  table_render.rs  text_truncate.rs
crates/widgets/src/: align.rs  block.rs  draw.rs  layout.rs  lib.rs  state.rs  style.rs  text.rs  theme.rs
crates/window/: CHANGELOG.md  Cargo.toml  README.md
crates/window/benches/: cursor_moved.rs  key_translate.rs  pixel_to_cell.rs
crates/window/src/: backend.rs  clipboard.rs  font.rs  geometry.rs  lib.rs  palette.rs  presenter.rs  web.rs
examples/: AGENTS.md  Cargo.toml  crossterm_demo.rs  dashboard.rs  demo.rs  dirty_viz.rs  dungeon_room.rs  headless.rs  headless_demo.rs  roguelike_dungeon.rs  runner.rs  scrolling_roguelike.rs  software_demo.rs  software_subpixel_demo.rs  sokoban.rs  sprite_stress.rs  subpixel.rs  tileset.rs  tileset_demo.rs  wasm_demo.rs  winit_softbuffer.rs
examples/examples/: 01_hello_world.rs  02_colors.rs  03_keyboard.rs  04_mouse.rs  05_layout_grid.rs  06_layers.rs  07_sprites_tileset.rs  08_animation.rs  09_widgets_dashboard.rs  10_widgets_interaction.rs  11_sokoban.rs  12_dungeon_scroll.rs  13_combat_log.rs  14_resize.rs  15_outpost_dashboard.rs  16_subcell_image.rs  17_theme_switch.rs  18_text_align.rs  18_weighted_fill.rs  19_overworld.rs  hello_world.rs
examples/hex_battle/: hexmap.rs  main.rs  render.rs  sim.rs
examples/src/: launch.rs  lib.rs  wasm_entry.rs
examples/src/util/: mod.rs  perf.rs  timestep.rs
examples/tests/: 01_hello_world.rs  02_colors.rs  03_keyboard.rs  04_mouse.rs  05_layout_grid.rs  06_layers.rs  07_sprites_tileset.rs  08_animation.rs  09_widgets_dashboard.rs  10_widgets_interaction.rs  11_sokoban.rs  12_dungeon_scroll.rs  13_combat_log.rs  14_resize.rs  15_outpost_dashboard.rs  16_subcell_image.rs  17_theme_switch.rs  18_text_align.rs  18_weighted_fill.rs  19_overworld.rs
examples/tests/snapshots/: 01_hello_world__headless_snapshot.snap  01_hello_world__png_snapshot.snap  01_hello_world__svg_snapshot.snap  02_colors__headless_snapshot.snap  02_colors__png_snapshot.snap  02_colors__svg_snapshot.snap  03_keyboard__headless_snapshot.snap  03_keyboard__png_snapshot.snap  03_keyboard__svg_snapshot.snap  04_mouse__headless_snapshot_motion_tracked.snap  04_mouse__headless_snapshot_motion_unavailable_fallback.snap  04_mouse__png_snapshot.snap  04_mouse__svg_snapshot.snap  05_layout_grid__headless_snapshot.snap  05_layout_grid__png_snapshot.snap  05_layout_grid__svg_snapshot.snap  06_layers__headless_snapshot.snap  06_layers__png_snapshot.snap  06_layers__svg_snapshot.snap  07_sprites_tileset__headless_snapshot.snap  07_sprites_tileset__png_snapshot.snap  07_sprites_tileset__svg_snapshot.snap  08_animation__headless_snapshot.snap  08_animation__png_snapshot.snap  08_animation__svg_snapshot.snap  09_widgets_dashboard__headless_snapshot.snap  09_widgets_dashboard__headless_snapshot_ping_button_click.snap  09_widgets_dashboard__png_snapshot.snap  09_widgets_dashboard__svg_snapshot.snap  10_widgets_interaction__headless_snapshot_click_increments.snap  (+41 more)
examples/util/: action.rs  draw.rs  fov.rs  game.rs  layout.rs  mod.rs  perf.rs  timestep.rs
gallery/: Cargo.toml  README.md
gallery/examples/: 01_hello_world.rs  02_styles_and_color.rs  03_text_and_lines.rs  04_layout_and_wrap.rs  04_text_layout_and_wrap.rs  05_layers_and_offsets.rs  06_widgets_and_spaced_layout.rs  07_stateful_widgets_and_selection.rs  08_focus_and_checkboxes.rs  09_pointer_interaction_and_counter.rs  10_layered_compositing_and_modal.rs  11_time_and_sparkline.rs  runner.rs
gallery/src/: keys.rs  lib.rs  press_any_key.rs  run_macro.rs
(+216 files in other folders)
