[workspace]
members = ["crates/*", "examples", "tools/cargo-bin"]
resolver = "2"

[workspace.metadata.bin]
wasm-server-runner = { version = "1.0.1" }
hk = { version = "1.48.0" }
cargo-criterion = { version = "1.1.0" }
# Version pinned to match the `wasm-bindgen` dependency in
# examples/Cargo.toml and crates/terminal-wasm/Cargo.toml, and the
# `cargo install wasm-bindgen-cli` step in .github/workflows/docs.yml — all
# three must move in lockstep. Used to reproduce the docs site's
# `wasm-bindgen --target web` pipeline locally, once the examples crate has
# a WASM launch path again (removed along with the old crates/examples/).
wasm-bindgen-cli = { version = "0.2.106", bins = ["wasm-bindgen"] }
# cargo-llms-txt is intentionally not managed here: it has no prebuilt
# binstall/quickinstall binaries, and cargo-run-bin's source-install fallback
# is broken (https://github.com/dustinblackman/cargo-run-bin/issues/39).
# It's installed to .bin/manual/ instead; see `setup-tools` in the Justfile.

[workspace.package]
edition = "2024"
rust-version = "1.88"
authors = ["Matan Lurey <matan@lurey.org>"]
license = "MIT"
repository = "https://github.com/crates-lurey-io/retroglyph"
keywords = ["roguelike", "terminal", "grid", "gamedev"]
categories = ["game-development", "graphics"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
must_use_candidate = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
module_name_repetitions = "allow"
