[workspace]
members = ["crates/*", "examples", "tools/cargo-bin"]
resolver = "2"

[workspace.metadata.bin]
wasm-server-runner = { version = "1.0.1" }
hk = { version = "1.48.0" }
cargo-criterion = { version = "1.1.0" }
# Version pinned to match the `wasm-bindgen` dependency in
# examples/Cargo.toml and crates/terminal-wasm/Cargo.toml, and
# docs.yml/tools/build-wasm-example*.sh, which all resolve it the same way
# (`cargo bin wasm-bindgen`) — all of these must move in lockstep. Used to
# build the docs site's WASM examples gallery, both in CI and locally (see
# `docs-preview-full` in the Justfile).
wasm-bindgen-cli = { version = "0.2.106", bins = ["wasm-bindgen"] }
# Local static file server for `docs-preview-full` (Justfile): serves
# target/doc over real HTTP (not file://, which browsers block fetch() of
# the WASM examples' .wasm module from) without depending on Python or any
# other tool outside the Rust toolchain.
miniserve = { version = "0.35.0" }
# cargo-llms-txt is intentionally not managed here: it has no prebuilt
# binstall/quickinstall binaries, and cargo-run-bin's source-install fallback
# is broken (https://github.com/dustinblackman/cargo-run-bin/issues/39).
# It's installed to .bin/manual/ instead; see `setup-tools` in the Justfile.

[workspace.package]
edition = "2024"
rust-version = "1.88"
authors = ["Matan Lurey <matan@lurey.org>"]
license = "MIT"
repository = "https://github.com/crates-lurey-io/retroglyph"
keywords = ["roguelike", "terminal", "grid", "gamedev"]
categories = ["game-development", "graphics"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
must_use_candidate = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
module_name_repetitions = "allow"
