[workspace]
members = ["crates/*", "examples", "benches", "tools/cargo-bin"]
resolver = "2"

[workspace.metadata.bin]
wasm-server-runner = { version = "1.0.1" }
hk = { version = "1.48.0" }
# Compares two `--save-baseline`-tagged criterion runs (e.g. `main` vs. the current working copy)
# and prints a table of the delta. Used by `just bench-compare` / `tools/bench-compare.sh`; see
# `benches/` for the benchmark crate and criterion's baseline docs for why plain `cargo bench`
# alone only ever compares against "the previous run", not a named revision.
critcmp = { version = "0.1.8" }
# Test runner used by `just test`/`just test-v` (see `.config/nextest.toml` for its config): runs
# every test in its own process and parallelizes across all of them (including separate `[[test]]`
# binaries, which plain `cargo test` runs one-at-a-time), not just tests within one binary. Still
# paired with a plain `cargo test --doc` for doctests, which nextest doesn't run -- see the `test`
# recipe below.
cargo-nextest = { version = "0.9.140", locked = true }
# Version pinned to match the `wasm-bindgen` dependency in
# examples/Cargo.toml and crates/terminal-wasm/Cargo.toml, and
# docs.yml/tools/build-wasm-example*.sh, which all resolve it the same way
# (`cargo bin wasm-bindgen`) — all of these must move in lockstep. Used to
# build the docs site's WASM examples gallery, both in CI and locally (see
# `docs-preview-full` in the Justfile).
# `wasm-bindgen-test-runner` (also in this package) is `wasm-pack test`'s test harness --
# required by `just test-wasm` below, on top of `wasm-bindgen` itself.
wasm-bindgen-cli = { version = "0.2.106", bins = ["wasm-bindgen", "wasm-bindgen-test-runner"] }
# Drives `just test-wasm` (crates/terminal-wasm's `tests/wasm_ffi.rs`): `wasm-pack test --node`
# builds that crate for wasm32-unknown-unknown and runs its wasm-bindgen-test suite under Node.js,
# bypassing the `wasm-server-runner` set as this workspace's `cfg(target_family = "wasm")` cargo
# runner (see .cargo/config.toml) -- wasm-pack sets its own runner env var per-invocation rather
# than relying on that static config, so the two don't conflict.
wasm-pack = { version = "0.15.0" }
# Local static file server for `docs-preview-full` (Justfile): serves
# target/doc over real HTTP (not file://, which browsers block fetch() of
# the WASM examples' .wasm module from) without depending on Python or any
# other tool outside the Rust toolchain.
miniserve = { version = "0.35.0" }
# cargo-llms-txt is intentionally not managed here: it has no prebuilt
# binstall/quickinstall binaries, and cargo-run-bin's source-install fallback
# is broken (https://github.com/dustinblackman/cargo-run-bin/issues/39).
# It's installed to .bin/manual/ instead; see `setup-tools` in the Justfile.

[workspace.package]
edition = "2024"
rust-version = "1.88"
authors = ["Matan Lurey <matan@lurey.org>"]
license = "MIT"
repository = "https://github.com/crates-lurey-io/retroglyph"
keywords = ["roguelike", "terminal", "grid", "gamedev"]
categories = ["game-development", "graphics"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
must_use_candidate = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
module_name_repetitions = "allow"
