[package]
name = "retroglyph-examples"
version = "0.1.0-alpha"
description = "Runnable examples for retroglyph (not published)"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
retroglyph-core = { path = "../crates/core", version = "0.1.0-alpha" }
# Unconditional, like `retroglyph-core`: widgets is backend-generic (no backend axis to gate it
# on), and every Tier 2 example that uses it (09_widgets_dashboard, 10_widgets_interaction) needs
# it on every backend feature combination this crate builds.
retroglyph-widgets = { path = "../crates/widgets", version = "0.1.0-alpha" }
retroglyph-crossterm = { path = "../crates/crossterm", version = "0.1.0-alpha", optional = true }
retroglyph-software = { path = "../crates/software", version = "0.1.0-alpha", optional = true }
retroglyph-window = { path = "../crates/window", version = "0.1.0-alpha", optional = true }
# Optional, wasm32-only in practice: see the `wasm-terminal` feature below.
# Declared as a plain (non-target-gated) optional dependency because Cargo
# features can't be restricted to a target; `wasm-terminal` is documented as
# wasm32-only and the crate itself is a no-op off that target (its `Backend`
# impl still compiles portably -- only its `#[wasm_bindgen]` FFI module is
# `cfg(target_arch = "wasm32")`-gated).
retroglyph-terminal-wasm = { path = "../crates/terminal-wasm", version = "0.1.0-alpha", optional = true }
# A portable `std::time::Instant`-alike: on non-wasm targets it's a zero-cost re-export of
# `std::time`; on `wasm32-unknown-unknown` it's backed by the browser's `Performance.now()`.
# Already in the workspace's `Cargo.lock` transitively (pulled by `winit`), so this adds no new
# dependency -- it just gives `util/perf.rs` and the `wasm_entry!` FFI tick paths a single,
# non-target-gated `web_time::Instant` instead of each hand-rolling its own native/wasm split.
web-time = "1"

[features]
# An example selects a backend by enabling one of these. With none enabled,
# every example still builds and runs against the Headless backend (used by
# `bin/runner.rs`'s "Headless" option and `launch::<E>()`'s fallback arm).
crossterm = ["dep:retroglyph-crossterm"]
# Pulls in `retroglyph-software/default-font` unconditionally: unlike the
# library itself (where an optional embedded font matters -- downstream
# users may bring their own bitmap font), there's no example in this gallery
# that benefits from a fontless software backend, so there's nothing to gain
# from splitting that out into a separate flag here. `--features software`
# alone is always enough to run.
# `tilesets` is unconditional here for the same reason `default-font` is: only one example
# (07_sprites_tileset) needs PNG sprite sheet loading, but `tools/build-wasm-example.sh` builds
# this whole crate with one shared `software` feature flag per variant, not per example, so
# there's no cheaper way to give that one example the capability without paying for it everywhere
# `software` is enabled. The cost is `image`/`alpha-blend` becoming compile-time (not runtime)
# dependencies of every software-backend build, not a per-example opt-in.
software = [
  "dep:retroglyph-software",
  "dep:retroglyph-window",
  "retroglyph-software/default-font",
  "retroglyph-software/tilesets",
]
# WASM-only: drives a Terminal<Headless> from a browser requestAnimationFrame
# loop instead of a canvas/window. See `wasm_entry!`'s wasm-headless branch.
# Mutually exclusive with `software` in practice (whichever the example
# binary is built with wins; `launch!`/`wasm_entry!` prefer `software` if
# both are enabled).
wasm-headless = []
# WASM-only: drives a Terminal<TerminalWasm> from a browser terminal emulator
# (e.g. xterm.js -- see docs/templates/examples/terminal-template.html)
# instead of a canvas/window or a plain <pre>. See `wasm_entry!`'s
# wasm-terminal branch. Mutually exclusive with `software`/`wasm-headless` in
# practice (whichever the example binary is built with wins; `launch!`/
# `wasm_entry!` prefer `software`, then `wasm-headless`, then this).
wasm-terminal = ["dep:retroglyph-terminal-wasm"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.106"
console_error_panic_hook = "0.1"

[dev-dependencies]
insta = { version = "1.34", features = ["yaml"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# PNG snapshots of the software (headless) renderer's pixel buffer.
image = { version = "0.25", default-features = false, features = ["png"] }
# PTY + vt100 SVG snapshots of the crossterm backend's ANSI output.
portable-pty = "0.9"
vt100 = "0.15"

[[example]]
name = "01_hello_world"
path = "examples/01_hello_world.rs"
