[package]
name = "retroglyph-core"
version = "0.1.0-alpha"
description = "A 2D pseudographic terminal library -- core types, no backend"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
# gem gets `libm` as its no_std float-math floor (see the `gem` feature); the
# `std` feature additionally turns on `gem/std`, which gem prefers over libm
# when both are present. So std builds use std's float intrinsics and no_std
# builds fall back to libm, with no code change in retroglyph-core.
gem = { version = "0.1.0-alpha.6", optional = true, default-features = false }
ixy = "0.6.0-alpha.9"
grixy = { version = "0.6.0-alpha.8", features = ["alloc", "buffer"] }
unicode-width = "0.2"
bitflags = "2.4"
unicode-segmentation = { version = "1.13", default-features = false, optional = true }

[features]
default = ["std", "egc", "gem"]
# `gem?/std`: only when gem is also enabled, prefer std float math over libm.
std = ["gem?/std"]
egc = ["dep:unicode-segmentation"]
gem = ["dep:gem", "gem/libm"]

[dev-dependencies]
unicode-width = "0.2"
insta = { version = "1.34", features = ["yaml"] }
proptest = "1"
