[package]
name = "retroglyph-crossterm"
version = "0.1.0"
description = "Crossterm terminal backend for retroglyph"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
retroglyph-core = { path = "../core", version = "0.1.0", default-features = false, features = ["std"] }
retroglyph-terminal = { path = "../terminal", version = "0.1.0" }
crossterm = "0.28"

[features]
# Forwards to retroglyph-terminal's egc feature (which forwards to
# retroglyph-core's). All the EGC-aware/non-EGC-aware cell-diffing code now
# lives in retroglyph-terminal; this crate has no code of its own gated on
# this flag, but still exposes it so callers don't need to know which crate
# in the terminal family actually implements it.
egc = ["retroglyph-terminal/egc", "retroglyph-core/egc"]
