[package]
name = "retroglyph-crossterm"
version = "0.1.2"
description = "Crossterm terminal backend for retroglyph"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
retroglyph-core = { path = "../core", version = "0.2.1", default-features = false, features = ["std"] }
retroglyph-terminal = { path = "../terminal", version = "0.1.2" }
crossterm = "0.28"
# Only pulled in behind the `tracing` feature (see below); the `draw`/`flush`/`poll_event`
# spans this enables are the only code in this crate that references it.
tracing = { version = "0.1", optional = true, default-features = false, features = ["std", "attributes"] }

[features]
# Forwards to retroglyph-terminal's egc feature (which forwards to
# retroglyph-core's). All the EGC-aware/non-EGC-aware cell-diffing code now
# lives in retroglyph-terminal; this crate has no code of its own gated on
# this flag, but still exposes it so callers don't need to know which crate
# in the terminal family actually implements it.
egc = ["retroglyph-terminal/egc", "retroglyph-core/egc"]
# Instruments `Backend::draw`, `Backend::flush`, and `Backend::poll_event` with `tracing` spans
# (`debug` level for draw/flush, `trace` for poll_event, since the latter is called every game-loop
# iteration by `drain_events`) so callers can profile where time is spent with any `tracing`
# subscriber (e.g. `tracing-subscriber`'s fmt layer, or a flamegraph via `tracing-flame`). A no-op,
# and this dependency entirely absent from the build, unless enabled.
tracing = ["dep:tracing"]
