[package]
name = "retroglyph-examples"
version = "0.2.0"
description = "Runnable examples, integration tests, and benchmarks for retroglyph (not published)"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
retroglyph-core = { path = "../core", version = "0.2.0" }
retroglyph-crossterm = { path = "../crossterm", version = "0.2.0", optional = true }
retroglyph-software = { path = "../software", version = "0.2.0", optional = true }
retroglyph-window = { path = "../window", version = "0.2.0", optional = true }
retroglyph-widgets = { path = "../widgets", version = "0.2.0" }

[features]
# A game selects a backend by enabling one of these. With none enabled every
# example still builds and runs against the Headless backend (used by
# examples/runner.rs and the metadata-consistency test).
crossterm = ["dep:retroglyph-crossterm"]
software = ["dep:retroglyph-software", "dep:retroglyph-window"]
default-font = ["software", "retroglyph-software/default-font"]
tilesets = ["software", "retroglyph-software/tilesets"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.106"
console_error_panic_hook = "0.1"

[dev-dependencies]
framepace = "0.1.0-alpha.0"
hexal = { version = "0.1.0-alpha.2", features = ["ixy"] }
unicode-width = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
portable-pty = "0.9.0"
vt100 = "0.15"
criterion = { version = "0.5", features = ["html_reports"] }
image = { version = "0.25", default-features = false, features = ["png"] }
insta = { version = "1.34", features = ["yaml"] }
# Used by benches/retroglyph.rs (behind the `crossterm` feature) for TTY
# detection; already present transitively via retroglyph-crossterm.
crossterm = "0.28"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

[[bench]]
name = "retroglyph"
harness = false

[[example]]
name = "dungeon_room"

[[example]]
name = "tileset"

[[example]]
name = "subpixel"

[[example]]
name = "hex_battle"
path = "examples/hex_battle/main.rs"

[[example]]
name = "headless"

[[example]]
name = "runner"
