[package]
name = "retroglyph-examples"
version = "0.2.0"
description = "Runnable examples, integration tests, and benchmarks for retroglyph (not published)"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
retroglyph-core = { path = "../core", version = "0.2.0" }
retroglyph-crossterm = { path = "../crossterm", version = "0.2.0", optional = true }
retroglyph-software = { path = "../software", version = "0.2.0", optional = true }
retroglyph-window = { path = "../window", version = "0.2.0", optional = true }
retroglyph-widgets = { path = "../widgets", version = "0.2.0" }
# Optional, wasm32-only in practice: see the `wasm-terminal` feature below.
# Declared as a plain (non-target-gated) optional dependency because Cargo
# features can't be restricted to a target; `wasm-terminal` is documented as
# wasm32-only and the crate itself is a no-op off that target (its `Backend`
# impl still compiles portably -- only its `#[wasm_bindgen]` FFI module is
# `cfg(target_arch = "wasm32")`-gated).
retroglyph-terminal-wasm = { path = "../terminal-wasm", version = "0.2.0", optional = true }

[features]
# A game selects a backend by enabling one of these. With none enabled every
# example still builds and runs against the Headless backend (used by
# examples/runner.rs and the metadata-consistency test).
crossterm = ["dep:retroglyph-crossterm"]
software = ["dep:retroglyph-software", "dep:retroglyph-window"]
default-font = ["software", "retroglyph-software/default-font"]
tilesets = ["software", "retroglyph-software/tilesets"]
# WASM-only: drives a Terminal<Headless> from a browser requestAnimationFrame
# loop instead of a canvas/window. See util/mod.rs's `rg_run!` wasm-headless
# branch. Mutually exclusive with `software` in practice (whichever the example
# binary is built with wins; `rg_run!` prefers `software` if both are enabled).
wasm-headless = []
# WASM-only: drives a Terminal<TerminalWasm> from a browser terminal emulator
# (e.g. xterm.js -- see docs/templates/examples/terminal-template.html)
# instead of a canvas/window or a plain <pre>. See util/mod.rs's `rg_run!`
# wasm-terminal branch. Mutually exclusive with `software`/`wasm-headless` in
# practice (whichever the example binary is built with wins; `rg_run!`
# prefers `software`, then `wasm-headless`, then this).
wasm-terminal = ["dep:retroglyph-terminal-wasm"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.106"
console_error_panic_hook = "0.1"

[dev-dependencies]
framepace = "0.1.0-alpha.0"
hexal = { version = "0.1.0-alpha.2", features = ["ixy"] }
unicode-width = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
portable-pty = "0.9.0"
vt100 = "0.15"
criterion = { version = "0.5", features = ["html_reports"] }
image = { version = "0.25", default-features = false, features = ["png"] }
insta = { version = "1.34", features = ["yaml"] }
# Used by benches/retroglyph.rs (behind the `crossterm` feature) for TTY
# detection; already present transitively via retroglyph-crossterm.
crossterm = "0.28"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

[[bench]]
name = "retroglyph"
harness = false

[[example]]
name = "dungeon_room"

[[example]]
name = "tileset"

[[example]]
name = "subpixel"

[[example]]
name = "hex_battle"
path = "examples/hex_battle/main.rs"

[[example]]
name = "headless"

[[example]]
name = "runner"
