[package]
name = "retroglyph-font"
version = "0.1.0"
description = "Bitmap glyph fonts and CP437 mapping for retroglyph's graphical backends"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
# Embeds the Unscii 16 default font (`unscii16::FONT`). Off by default so a
# consumer that supplies its own bitmap font pays nothing for the ~4 KB atlas.
default-font = []
