[package]
name = "retroglyph-software"
version = "0.1.0-alpha"
description = "Software (winit + softbuffer) pixel rendering backend for retroglyph"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
retroglyph-core = { path = "../core", version = "0.1.0-alpha", default-features = false, features = ["std"] }
# Seam only (Presenter/WindowBackend/WindowHandle): no winit. The loop is the
# caller's business -- games depend on retroglyph-window with its default
# `winit` feature; this crate just implements the renderer side.
retroglyph-window = { path = "../window", version = "0.1.0-alpha", default-features = false }
ixy = "0.6.0-alpha.9"
grixy = { version = "0.6.0-alpha.8", features = ["alloc", "buffer"] }
softbuffer = "0.4"
log = "0.4"
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
alpha-blend = { version = "0.2", optional = true, default-features = false, features = ["std"] }

[features]
# The `software-` prefix from the pre-split monolith is redundant now that
# these live inside `retroglyph-software` (ADR 014): `retroglyph-software/tilesets`
# reads better than `.../software-tilesets`.
tilesets = ["dep:image", "dep:alpha-blend"]
default-font = []

[dev-dependencies]
insta = { version = "1.34", features = ["yaml"] }
